meeting adjustments
